Вывод кнопок значений валюты на экран

--- a/html/index.html
+++ b/html/index.html
@@ -16,11 +16,17 @@
   <body>
     <div class="wrapper-all">
       <div class="currency-body">
-        <div class="currency-body__exchange-wrapper">
-          <input type="text" />
-          <button>Расчитать</button>
+        <div class="currency-body__wrapper-currency-value">
+          <div class="currency-body__wrapper-items"></div>
+          <input class="currency-body__currency-input" />
         </div>
-        <div class="currency-body__display-currency"></div>
+
+        <!-- <div class="currency-body__arrow-change"></div> -->
+
+        <div class="currency-body__wrapper-currency-rate">
+          <div class="currency-body__wrapper-rate"></div>
+          <div class="currency-body__view-rate"></div>
+        </div>
       </div>
     </div>
 
