Подключенны обработчики событий выбора одной валюты, ввода нужного курса

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,8 @@
       <div class="currency-body">
         <div class="currency-body__wrapper-currency-value">
           <div class="currency-body__wrapper-items"></div>
-          <input class="currency-body__currency-input" />
+          <input type="text" class="currency-body__currency-input" />
+          <div class="currency-body__currency-curse-input"></div>
         </div>
 
         <!-- <div class="currency-body__arrow-change"></div> -->
@@ -26,6 +27,7 @@
         <div class="currency-body__wrapper-currency-rate">
           <div class="currency-body__wrapper-rate"></div>
           <div class="currency-body__view-rate"></div>
+          <div class="currency-body__currency-curse-rate"></div>
         </div>
       </div>
     </div>
