Добавлено меню показа курсов всех валют

--- a/html/index.html
+++ b/html/index.html
@@ -17,20 +17,23 @@
     <div class="wrapper-all">
       <div class="currency-body">
         <div class="currency-body__wrapper-currency-value">
+          <h2>У меня есть</h2>
           <div class="currency-body__wrapper-items"></div>
           <input type="text" class="currency-body__currency-input" />
           <div class="currency-body__currency-curse-input"></div>
         </div>
 
         <div class="currency-body__wrapper-currency-rate">
+          <h2>Хочу приобрести</h2>
           <div class="currency-body__wrapper-rate"></div>
           <div class="currency-body__view-rate"></div>
           <div class="currency-body__currency-curse-rate"></div>
         </div>
+       
       </div>
+      <div class="currency-body__all-currency-btn">Другие валюты</div>
+      <div class="currency-body__all-currency-wrapper"></div>
     </div>
-
-    <!-- <script type="module" src="../js/Data/getData.js"></script> -->
     <script type="module" src="../js/script.js"></script>
   </body>
 </html>
