--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,8 @@
           <div class="currency-body__currency-curse-input"></div>
         </div>
 
+        <div class="currency-body__arrow"></div>
+
         <div class="currency-body__wrapper-currency-rate">
           <h2>Хочу приобрести</h2>
           <div class="currency-body__wrapper-rate"></div>
